trunk/Archive2/64/c1407eaa806657/output
main.cpp: In function 'int main()':
main.cpp:11:23: error: expected unqualified-id before '=' token
      SQLQueryCallback = &foo ; // error: expected unqualified-id before '=' token
                       ^
